syntax = "proto3";

package com.ngc.test.model1;

option java_multiple_files = true;

message Data5 {


}
