syntax = "proto3";

package com.ngc.test.model1.test2;

option java_multiple_files = true;

message Data3 {


}
